.metadata/.plugins/org.eclipse.cdt.ui/Overloading the Insertion Operator for Printing.build.log

**** Build of configuration Debug for project Overloading the Insertion Operator for Printing ****

make all 
Building file: ../src/Overloading the Insertion Operator for Printing.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Overloading the Insertion Operator for Printing.d" -MT"src/Overloading\ the\ Insertion\ Operator\ for\ Printing.d" -o"src/Overloading the Insertion Operator for Printing.o" "../src/Overloading the Insertion Operator for Printing.cpp"
../src/Overloading the Insertion Operator for Printing.cpp:58:2: error: type 'ostream' (aka 'basic_ostream<char>') does not provide a call operator
        cout("s");
        ^~~~
1 error generated.
make: *** [src/Overloading the Insertion Operator for Printing.o] Error 1
